--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -3,20 +3,20 @@ import Icon from './Icon.astro';
 ---
 
 <section class="box skills">
-	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Full Stack</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+	<div class="stack gap-2">
+		<Icon icon="compass-tool" color="var(--accent-regular)" size="2.5rem" gradient />
+		<h2>Design Polymath</h2>
+		<p>Multidisciplinary design background that includes UX, visual design, front-end development, content strategy, and a PhD in English</p>
 	</div>
-	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Industry Leader</h2>
-		<p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p>
-	</div>
-	<div class="stack gap-2 lg:gap-4">
+	<div class="stack gap-2">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Strategy-Minded</h2>
-		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
+		<p>Over 10 years of experience driving strategic, human-centered communication strategies that support key business objectives</p>
+	</div>
+	<div class="stack gap-2">
+		<Icon icon="book-open-text" color="var(--accent-regular)" size="2.5rem" gradient />
+		<h2>Life-long Learner</h2>
+		<p>I'm always experimenting and learning.</p>
 	</div>
 </section>
 
@@ -25,7 +25,7 @@ import Icon from './Icon.astro';
 		border: 1px solid var(--gray-800);
 		border-radius: 0.75rem;
 		padding: 1.5rem;
-		background-color: var(--gray-999_40);
+		background-color: var(--gray-999);
 		box-shadow: var(--shadow-sm);
 	}
 
