--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,15 +6,15 @@ const currentYear = new Date().getFullYear();
 <footer>
 	<div class="group">
 		<p>
-			Designed & Developed in Portland with <a href="https://astro.build/">Astro</a>
+			Developed with <a href="https://astro.build/">Astro</a>
 			<Icon icon="rocket-launch" size="1.2em" />
 		</p>
-		<p>&copy; {currentYear} Jeanine White</p>
+		<p>&copy; {currentYear} Brandon Jernigan</p>
 	</div>
 	<p class="socials">
-		<a href="https://twitter.com/me"> Twitter</a>
+		<a href="https://www.linkedin.com/in/brandonjernigan/"> LinkedIn</a>
 		<a href="https://github.com/me"> GitHub</a>
-		<a href="https://codepen.io/me"> CodePen</a>
+		<a href="#" style="text-decoration: none"><Icon icon="plugs" size="1.2em" />Social Media Free</a>
 	</p>
 </footer>
 <style>
@@ -27,6 +27,7 @@ const currentYear = new Date().getFullYear();
 		text-align: center;
 		color: var(--gray-400);
 		font-size: var(--text-sm);
+		background-color: #faeff2;
 	}
 
 	footer a {
