--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,9 @@
 	--gray-900: #f3f4f7;
 	--gray-999-basis: 0, 0%, 100%;
 	--gray-999_40: hsla(var(--gray-999-basis), 0.4);
+	--gray-999_60: hsla(var(--gray-999-basis), 0.6);
+	--gray-999_80: hsla(var(--gray-999-basis), 0.8);
+	--gray-999_20: hsla(var(--gray-999-basis), 0.2);
 	--gray-999: #ffffff;
 
 	--accent-light: #c561f6;
@@ -122,7 +125,7 @@ body {
 }
 
 body {
-	background-color: var(--gray-999);
+	background-color: #faeff2;
 	color: var(--gray-200);
 	font-family: var(--font-body);
 	-webkit-font-smoothing: antialiased;
