--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -6,7 +6,7 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[]
 	{ label: 'LinkedIn', href: 'https://www.linkedin.com/in/brandonjernigan//', icon: 'linkedin-logo' },
 	{ label: 'GitHub', href: 'https://github.com/JUN1U5/', icon: 'github-logo' },
 	{ label: 'dribbble', href: 'https://dribbble.com/JUN1U5', icon: 'dribbble-logo' },
-	{ label: 'email', href: 'mailto:', icon: 'envelope-simple' },
+	{ label: 'email', href: 'mailto:bljernigan@gmail.com', icon: 'envelope-simple' },
 ];
 ---
 
